# chat

./: .gitignore
back/: README.md  locustfile.py  pyproject.toml
back/src/chat_backend/: __init__.py  models.py
back/tests/: conftest.py  test_server.py
front/: package-lock.json  package.json
front/src/routes/: +page.svelte  Chat.svelte
