[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_backend"
version = "0.0.1"
readme = "README.md"
dependencies = ["fastapi", "pydantic"]

[project.optional-dependencies]
quality = ["pytest", "locust", "ruff"]
deployment = ["gunicorn"]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
testpaths = ["tests"]